alter image profile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
         <div class="tree-content">
             <div class="foto-perfil">
-                <img src="assets/gabriel.jpeg" alt="Perfil">
+                <img src="assets/user.png" alt="Perfil">
             </div>
 
             <span class="insta-user">@correasgabriel</span>
